tests/suite/snapshots/suite__check__tests__check__bad-global2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-global2.xi:4:9]
   │
 4 │     x = 1
   ·         ┬  
   ·         ╰── Expected bool but found int
───╯

